--- a/index.html
+++ b/index.html
@@ -106,9 +106,9 @@
       <h2>How to Use It</h2>
       <ol>
         <li><b>Download the Tool</b> using the form above.</li>
-        <li><b>Unzip the File</b> to get <code>filter_raws.bat</code>.</li>
+        <li><b>Unzip the File</b> to get <code>filter_raws.exe</code>.</li>
         <li><b>Place It in Your Photo Folder</b> (the one with RAW + JPG files).</li>
-        <li><b>Run the Tool</b> by double-clicking the <code>filter_raws.bat</code> file.</li>
+        <li><b>Run the Tool</b> by double-clicking the <code>filter_raws.exe</code> file.</li>
         <li>A new folder called <code>matched_raws</code> will contain all the matched pairs.</li>
       </ol>
     </section>
@@ -117,14 +117,14 @@
       <h2>Example</h2>
       <p>If your folder has:</p>
       <pre>
-IMG_001.CR2
+IMG_001.RAW
 IMG_001.JPG
-IMG_002.CR2
+IMG_002.RAW
 IMG_003.JPG
       </pre>
       <p>After running the tool, <code>matched_raws</code> will contain:</p>
       <pre>
-IMG_001.CR2
+IMG_001.RAW
 IMG_001.JPG
       </pre>
       <p>The rest stay in the original folder.</p>
