--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <body>
   <div class="container">
     <h1>RAW + JPG Sorter Utility</h1>
-    <form action="YOUR_WEB_APP_URL_HERE" method="post" target="hidden_iframe" onsubmit="afterSubmit()">
+    <form action="https://script.google.com/macros/s/AKfycby1ZRODzJAyE_eJ2YwvZDdOQlWI6NrsAabHIpPLfpudhAd2JrNgZqhaTl-pMpo6zte6/exec" method="post" target="hidden_iframe" onsubmit="afterSubmit()">
       <h2>Get Your Free Tool</h2>
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
@@ -135,7 +135,7 @@ IMG_001.JPG
     function afterSubmit() {
       setTimeout(function(){
         alert("Thank you! The download link has been sent to your email.\n\nRedirecting to download now...");
-        window.location.href = "YOUR_DOWNLOAD_LINK_HERE";
+        window.location.href = "https://drive.google.com/file/d/1-d4u2XEtunl6GlZ8XkRmWOM8pUas3eP9/view?usp=drive_link";
       }, 1000);
     }
   </script>
